<resources>
    <string name="app_name">Money_Counter_App</string>
    <string name="text_сosts">Spendings</string>
    <string name="text_main">Main</string>
    <string name="text_chart">Analytics</string>
    <string name="text_settings">Settings</string>
    <string name="settings_btn_clear_spending">clear spending</string>
    <string name="settings_btn_clear_category">clear category</string>
    <string name="settings_message_clear_success">Success delete</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="txt_set_custom_date">Pick date</string>
    <string name="txt_topbar_right">RIGHT</string>
    <string name="txt_topbar_left">LEFT</string>
    <string name="txt_add_category">Add category</string>
    <string name="validation_empty_categories">No added category</string>
    <string name="information_empty_list">Empty data</string>
    <string name="error_list">Error</string>
    <string name="button_generate_color">Generate</string>
    <string name="text_color">Color:</string>
    <string name="category_name">Category name</string>
    <string name="text_choose_type">Choose type:</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="text_accumulation">Accumulation</string>
    <string name="save">Save category</string>
    <string name="et_text_enter_subcategory_name">Subcategoy name</string>
    <string name="text_update">Refresh</string>
    <string name="txt_add_subcategory">Add subcategory</string>
    <string name="txt_subcategory">Subcategory</string>
    <string name="plh_end_month">period end day</string>
    <string name="text_limits">Limits</string>
    <string name="navigation_drawer_open">bla</string>
    <string name="navigation_drawer_close">nah</string>
    <string name="menu_clear_category">Delete category</string>
    <string name="menu_clear_spendings">Clear all data</string>
    <string name="menu_group_data">Data</string>
    <string name="menu_group_settings">Settings</string>
    <string name="arrow_back">arrow back</string>
    <string name="key2">2</string>
    <string name="key1">1</string>
    <string name="key3">3</string>
    <string name="key6">6</string>
    <string name="key5">5</string>
    <string name="key4">4</string>
    <string name="key_delete">Delete</string>
    <string name="key_9">9</string>
    <string name="key_8">8</string>
    <string name="key_7">7</string>
    <string name="hint_comment">comment</string>
    <string name="label_category">Category</string>
    <string name="label_subcategory">Subcategory</string>
    <string name="process_income">Income</string>
    <string name="process_spending">Spending</string>
    <string name="subcategories">Subcategories:</string>
    <string name="choose_image">Choose category image</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="custom">Custom</string>
    <string name="period_choose">Choose period</string>
    <string name="dashboard">Dashboard</string>
    <string name="balance">Balance</string>
    <string name="choose_currency_type">Choose currency type</string>
    <string name="show_hidden">Show hidden?</string>
    <string name="show_sum_per_day">Show sum per day?</string>
    <string name="start_balance">Start balance</string>
    <string name="account_name">Account name</string>
    <string name="add_transaction">Add transaction</string>
    <string name="create_account">Create account</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="limits">Limits</string>
    <string name="transaction_available">Transaction available:</string>
    <string name="transaction_count">%1$d from %2$d</string>
</resources>
