<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_group_settings">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_add_24dp"
                    android:title="Share" />
        </menu>
    </item>
    <item android:title="@string/menu_group_data">
        <menu>
            <item
                    android:id="@+id/clear_category"
                    android:icon="@drawable/ic_delete_forever"
                    android:title="@string/menu_clear_category" />
            <item
                    android:id="@+id/clear_spending"
                    android:icon="@drawable/ic_delete_forever"
                    android:title="@string/menu_clear_spendings" />
        </menu>
    </item>
</menu>