<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@id/navigationDashboard"
            android:enabled="true"
            android:icon="@drawable/ic_menu_home"
            app:iconTint="@color/colorAccent"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/transactionFragment"
            android:enabled="true"
            app:iconTint="@color/colorAccent"
            android:icon="@drawable/ic_menu_graph"
            android:title="@string/text_chart" />
        <item
            android:id="@+id/limitsFragment"
            android:enabled="true"
            android:icon="@drawable/ic_menu_limits"
            app:iconTint="@color/colorAccent"
            android:title="@string/text_limits" />
        <item
            android:id="@+id/settingsFragment"
            android:enabled="true"
            android:icon="@drawable/ic_menu_settings"
            app:iconTint="@color/colorAccent"
            android:title="@string/settings" />
    </group>
</menu>