<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/numbers_keyboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v66"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/summary"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/design_default_color_primary_variant"
        android:gravity="end|center_vertical"
        android:hint="0"
        android:paddingEnd="16dp"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        app:layout_constraintEnd_toEndOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/chipsContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:animateLayoutChanges="true"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_subcategory_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:chipSpacingVertical="8dp"
            app:singleSelection="true" />
    </HorizontalScrollView>

    <EditText
        android:id="@+id/itemComment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end|center_vertical"
        android:hint="@string/hint_comment"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/chipsContainer"
        tool:layout_editor_absoluteY="60dp"
        tool:text="комментарий" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key7"
        style="@style/TextButton"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@+id/key_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemComment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/TextButton"
        android:layout_marginEnd="1dp"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@+id/key9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/key7"
        app:layout_constraintTop_toTopOf="@id/key7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key9"
        style="@style/TextButton"
        android:layout_marginEnd="1dp"
        android:text="@string/key_9"
        app:layout_constraintEnd_toEndOf="@id/v66"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/key_8"
        app:layout_constraintTop_toTopOf="@id/key7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyDelete"
        style="@style/TextButton"
        android:layout_width="0dp"
        android:layout_marginRight="1dp"
        android:text="@string/key_delete"
        app:layout_constraintBottom_toBottomOf="@id/key7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/v66"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemComment" />
    <!-- end first keyboard row -->

    <com.example.holmi_production.money_counter_app.ui.custom.SplitButtonView
        android:id="@+id/splittedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/key0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/v66"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/key4" />
    <!-- -->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key4"
        style="@style/TextButton"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/key4"
        app:layout_constraintEnd_toStartOf="@+id/key5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key5"
        style="@style/TextButton"
        android:layout_marginEnd="1dp"
        android:text="@string/key5"
        app:layout_constraintEnd_toStartOf="@+id/key6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key4"
        app:layout_constraintTop_toTopOf="@id/key4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key6"
        style="@style/TextButton"
        android:layout_marginEnd="1dp"
        android:text="@string/key6"
        app:layout_constraintEnd_toEndOf="@id/v66"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key5"
        app:layout_constraintTop_toBottomOf="@id/key7"
        app:layout_constraintTop_toTopOf="@id/key4" />
    <!-- -->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key1"
        style="@style/TextButton"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/key1"
        app:layout_constraintEnd_toStartOf="@+id/key2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key2"
        style="@style/TextButton"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/key2"
        app:layout_constraintEnd_toStartOf="@+id/key3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key1"
        app:layout_constraintTop_toBottomOf="@id/key4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key3"
        style="@style/TextButton"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/key3"
        app:layout_constraintEnd_toEndOf="@id/v66"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key2"
        app:layout_constraintTop_toBottomOf="@id/key4" />
    <!-- -->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key0"
        style="@style/TextButton"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@+id/keyDivider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyDivider"
        style="@style/TextButton"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:text="."
        app:layout_constraintEnd_toEndOf="@id/v66"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/key0"
        app:layout_constraintTop_toBottomOf="@id/key1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

