<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/date_container">
        <Button
                android:id="@+id/btn_category_month"
                android:text="@string/month"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"
                app:layout_constraintStart_toEndOf="@+id/btn_category_week"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"/>

        <Button
                android:id="@+id/btn_category_week"
                android:text="@string/week"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_category_day"
                app:layout_constraintEnd_toStartOf="@+id/btn_category_month"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"/>

        <Button
                android:id="@+id/btn_category_day"
                android:text="@string/day"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_category_week"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_custom_date"
                android:text="@string/txt_set_custom_date"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_margin="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>